[package]
name = "server"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "void"
path = "src/blockchain.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.2.0", features = ["json", "charset"] }
substring = "1.4.5"
actix-web = "3"
tiny_http = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4"
sha256 = "1.0.2"
